@@ -1,5 +1,10 @@
 2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
 
+	A bit cleanup 
+	* gameswf/gameswf_types.cpp
+
+2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
+
 	Fixed get_bound() bug that show one's worth during rotation
 	* gameswf/gameswf_types.cpp
 
